// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Video 1`] = `
<div
  className="video__outer-container"
>
  <div
    className="video__inner-container"
  >
    <div
      className="video__container"
    >
      <div
        className="video__header"
      >
        <p
          className="video__date"
        >
          2016-10-09
        </p>
      </div>
      <YouTube
        className="video__video"
        onPause={[Function]}
        onReady={[Function]}
        onStateChange={[Function]}
        opts={
          Object {
            "height": "315",
            "playerVars": Object {
              "autoplay": 1,
              "cc_lang_pref": "en",
              "cc_load_policy": 1,
              "controls": 0,
              "end": null,
              "modestbranding": 1,
              "playsinline": 1,
              "rel": 0,
              "showinfo": 0,
              "start": 0,
            },
            "width": "560",
          }
        }
        videoId="ApTLB76Nmdg"
      />
    </div>
    <CaptionView
      captionIsHighlighted={false}
      eventHandlers={
        Object {
          "onAfterRangeChange": [Function],
          "onClearPress": [Function],
          "onHighlight": [Function],
          "onPlayPausePress": [Function],
          "onRangeChange": [Function],
          "onRestartPress": [Function],
          "onScroll": [Function],
          "onSkipBackPress": [Function],
          "onSkipForwardPress": [Function],
          "onZoomToClipPress": [Function],
        }
      }
      highlightedCharRange={
        Array [
          -1,
          -1,
        ]
      }
      isPaused={true}
      isZoomedToClip={false}
      rangeSliders={
        Array [
          Object {
            "end": 5,
            "label": "Transcript",
            "start": 0,
            "styles": Object {
              "handle": Object {
                "backgroundColor": "#758aa8",
                "border": "1px solid #2c4770",
              },
              "rail": Object {
                "backgroundColor": "#d3dae3",
              },
              "track": Object {
                "backgroundColor": "#758aa8",
              },
            },
            "type": "VIEW",
          },
          Object {
            "end": 0,
            "label": "Clip",
            "start": 0,
            "styles": Object {
              "handle": Object {
                "backgroundColor": "#758aa8",
                "border": "1px solid #2c4770",
              },
              "rail": Object {
                "backgroundColor": "#d3dae3",
              },
              "track": Object {
                "backgroundColor": "#758aa8",
              },
            },
            "type": "SELECTION",
          },
        ]
      }
      stateAuthority={null}
      timer={0}
      videoDuration={5224}
      videoFact={
        Object {
          "charOffsets": Object {
            "0": 0,
            "1": 5,
            "10": 55,
            "11": 64,
            "12": 71,
            "13": 76,
            "14": 81,
            "15": 84,
            "16": 89,
            "17": 92,
            "18": 100,
            "19": 104,
            "2": 13,
            "20": 107,
            "21": 118,
            "22": 129,
            "23": 132,
            "24": 136,
            "25": 142,
            "26": 146,
            "27": 150,
            "28": 157,
            "29": 170,
            "3": 17,
            "30": 177,
            "31": 185,
            "32": 193,
            "33": 201,
            "34": 205,
            "35": 212,
            "36": 218,
            "37": 228,
            "38": 231,
            "39": 235,
            "4": 24,
            "40": 246,
            "41": 249,
            "42": 262,
            "43": 271,
            "44": 281,
            "45": 288,
            "46": 291,
            "47": 293,
            "48": 298,
            "49": 303,
            "5": 32,
            "50": 311,
            "51": 317,
            "52": 323,
            "53": 330,
            "54": 332,
            "55": 339,
            "56": 342,
            "57": 351,
            "58": 355,
            "59": 359,
            "6": 37,
            "60": 370,
            "61": 381,
            "62": 388,
            "63": 392,
            "64": 394,
            "65": 399,
            "66": 403,
            "67": 413,
            "68": 423,
            "69": 427,
            "7": 41,
            "70": 431,
            "71": 437,
            "72": 444,
            "73": 452,
            "74": 455,
            "75": 459,
            "76": 466,
            "77": 469,
            "78": 474,
            "79": 479,
            "8": 47,
            "80": 483,
            "81": 486,
            "82": 493,
            "83": 500,
            "84": 504,
            "85": 512,
            "86": 516,
            "87": 521,
            "88": 531,
            "89": 541,
            "9": 51,
            "90": 549,
            "length": 91,
          },
          "fact": Object {
            "kind": "video",
            "primaryDate": "2016-10-09",
            "primaryDateKind": "recorded",
            "title": "Donald Trump - Hillary Clinton (2/3)",
          },
          "plainText": "Good evening I'm Martha Raddatz from ABC News. And I'm Anderson Cooper from CNN. We want to welcome you to Washington University in St. Louis for the second presidential debate between Hillary Clinton and Donald Trump sponsored by the Commission on Presidential Debates. tonight's debate is a Town Hall format, which gives voters a chance to directly ask the candidates questions. Martha and I will ask follow-up questions but the night really belongs to the people in this room and to people across the country who have submitted questions online.",
          "speakerPerson": Object {
            "0": 0,
            "1": 1,
            "length": 2,
          },
          "speakerWord": Object {
            "0": 0,
            "1": 8,
            "length": 2,
          },
          "speakers": Array [
            Object {
              "firstname": "Martha",
              "lastname": "Raddatz",
            },
            Object {
              "firstname": "Anderson",
              "lastname": "Cooper",
            },
          ],
          "timestamps": Object {
            "0": 0.75,
            "1": 0.9599999785423279,
            "10": 4.258999824523926,
            "11": 4.5289998054504395,
            "12": 4.679999828338623,
            "13": 5.099999904632568,
            "14": 5.309999942779541,
            "15": 5.489999771118164,
            "16": 5.548999786376953,
            "17": 5.699999809265137,
            "18": 5.879000186920166,
            "19": 6.089000225067139,
            "2": 1.559999942779541,
            "20": 6.239999771118164,
            "21": 7.199999809265137,
            "22": 7.289999961853027,
            "23": 7.5289998054504395,
            "24": 7.798999786376953,
            "25": 8.010000228881836,
            "26": 8.428999900817871,
            "27": 8.880000114440918,
            "28": 9.239999771118164,
            "29": 9.6899995803833,
            "3": 1.9199999570846558,
            "30": 9.718999862670898,
            "31": 10.289999961853027,
            "32": 10.319999694824219,
            "33": 10.678999900817871,
            "34": 10.888999938964844,
            "35": 11.388999938964844,
            "36": 12.388999938964844,
            "37": 12.479999542236328,
            "38": 12.539999961853027,
            "39": 12.989999771118164,
            "4": 2.128999948501587,
            "40": 13.079999923706055,
            "41": 13.649999618530273,
            "42": 13.880000114440918,
            "43": 14.880000114440918,
            "44": 15.149999618530273,
            "45": 15.388999938964844,
            "46": 15.449999809265137,
            "47": 15.869999885559082,
            "48": 16.108999252319336,
            "49": 16.138999938964844,
            "5": 2.5199999809265137,
            "50": 16.799999237060547,
            "51": 17.010000228881836,
            "52": 17.43000030517578,
            "53": 17.459999084472656,
            "54": 17.608999252319336,
            "55": 18.118999481201172,
            "56": 18.6299991607666,
            "57": 18.809999465942383,
            "58": 18.989999771118164,
            "59": 19.40999984741211,
            "6": 3.059999942779541,
            "60": 19.788999557495117,
            "61": 20.788999557495117,
            "62": 20.8799991607666,
            "63": 20.93899917602539,
            "64": 21.149999618530273,
            "65": 21.299999237060547,
            "66": 21.68899917602539,
            "67": 21.809999465942383,
            "68": 22.469999313354492,
            "69": 22.59000015258789,
            "7": 3.0899999141693115,
            "70": 22.768999099731445,
            "71": 23.038999557495117,
            "72": 23.459999084472656,
            "73": 23.760000228881836,
            "74": 23.850000381469727,
            "75": 24.149999618530273,
            "76": 24.239999771118164,
            "77": 24.389999389648438,
            "78": 24.68899917602539,
            "79": 24.989999771118164,
            "8": 3.6589999198913574,
            "80": 25.018999099731445,
            "81": 25.709999084472656,
            "82": 25.799999237060547,
            "83": 26.1299991607666,
            "84": 26.309999465942383,
            "85": 26.639999389648438,
            "86": 26.670000076293945,
            "87": 26.93899917602539,
            "88": 27.510000228881836,
            "89": 28.170000076293945,
            "9": 3.869999885559082,
            "90": 28.829999923706055,
            "length": 91,
          },
          "youtubeId": "ApTLB76Nmdg",
        }
      }
    />
  </div>
</div>
`;

exports[`Video with highlights 1`] = `
<div
  className="video__outer-container"
>
  <div
    className="video__inner-container"
  >
    <div
      className="video__container"
    >
      <div
        className="video__header"
      >
        <button
          className="video__button video__button--top"
          onClick={[Function]}
        >
          Give your Take on this
        </button>
        <p
          className="video__date"
        >
          2016-10-09
        </p>
      </div>
      <YouTube
        className="video__video"
        onPause={[Function]}
        onReady={[Function]}
        onStateChange={[Function]}
        opts={
          Object {
            "height": "315",
            "playerVars": Object {
              "autoplay": 1,
              "cc_lang_pref": "en",
              "cc_load_policy": 1,
              "controls": 0,
              "end": 3,
              "modestbranding": 1,
              "playsinline": 1,
              "rel": 0,
              "showinfo": 0,
              "start": 0,
            },
            "width": "560",
          }
        }
        videoId="ApTLB76Nmdg"
      />
    </div>
    <CaptionView
      captionIsHighlighted={true}
      eventHandlers={
        Object {
          "onAfterRangeChange": [Function],
          "onClearPress": [Function],
          "onHighlight": [Function],
          "onPlayPausePress": [Function],
          "onRangeChange": [Function],
          "onRestartPress": [Function],
          "onScroll": [Function],
          "onSkipBackPress": [Function],
          "onSkipForwardPress": [Function],
          "onZoomToClipPress": [Function],
        }
      }
      highlightedCharRange={
        Array [
          0,
          37,
        ]
      }
      isPaused={true}
      isZoomedToClip={true}
      rangeSliders={
        Array [
          Object {
            "end": 5,
            "label": "Transcript",
            "start": 0,
            "styles": Object {
              "handle": Object {
                "backgroundColor": "#758aa8",
                "border": "1px solid #2c4770",
              },
              "rail": Object {
                "backgroundColor": "#d3dae3",
              },
              "track": Object {
                "backgroundColor": "#758aa8",
              },
            },
            "type": "VIEW",
          },
          Object {
            "end": 3,
            "label": "Clip",
            "start": 0,
            "styles": Object {
              "handle": Object {
                "backgroundColor": "#758aa8",
                "border": "1px solid #2c4770",
              },
              "rail": Object {
                "backgroundColor": "#d3dae3",
              },
              "track": Object {
                "backgroundColor": "#758aa8",
              },
            },
            "type": "SELECTION",
          },
          Object {
            "end": 3.3,
            "label": "Zoom",
            "start": -0.30000000000000004,
            "styles": Object {
              "handle": Object {
                "backgroundColor": "#758aa8",
                "border": "1px solid #2c4770",
              },
              "rail": Object {
                "backgroundColor": "#d3dae3",
              },
              "track": Object {
                "backgroundColor": "#758aa8",
              },
            },
            "type": "ZOOM",
          },
        ]
      }
      stateAuthority={null}
      timer={0}
      videoDuration={5224}
      videoFact={
        Object {
          "charOffsets": Object {
            "0": 0,
            "1": 5,
            "10": 55,
            "11": 64,
            "12": 71,
            "13": 76,
            "14": 81,
            "15": 84,
            "16": 89,
            "17": 92,
            "18": 100,
            "19": 104,
            "2": 13,
            "20": 107,
            "21": 118,
            "22": 129,
            "23": 132,
            "24": 136,
            "25": 142,
            "26": 146,
            "27": 150,
            "28": 157,
            "29": 170,
            "3": 17,
            "30": 177,
            "31": 185,
            "32": 193,
            "33": 201,
            "34": 205,
            "35": 212,
            "36": 218,
            "37": 228,
            "38": 231,
            "39": 235,
            "4": 24,
            "40": 246,
            "41": 249,
            "42": 262,
            "43": 271,
            "44": 281,
            "45": 288,
            "46": 291,
            "47": 293,
            "48": 298,
            "49": 303,
            "5": 32,
            "50": 311,
            "51": 317,
            "52": 323,
            "53": 330,
            "54": 332,
            "55": 339,
            "56": 342,
            "57": 351,
            "58": 355,
            "59": 359,
            "6": 37,
            "60": 370,
            "61": 381,
            "62": 388,
            "63": 392,
            "64": 394,
            "65": 399,
            "66": 403,
            "67": 413,
            "68": 423,
            "69": 427,
            "7": 41,
            "70": 431,
            "71": 437,
            "72": 444,
            "73": 452,
            "74": 455,
            "75": 459,
            "76": 466,
            "77": 469,
            "78": 474,
            "79": 479,
            "8": 47,
            "80": 483,
            "81": 486,
            "82": 493,
            "83": 500,
            "84": 504,
            "85": 512,
            "86": 516,
            "87": 521,
            "88": 531,
            "89": 541,
            "9": 51,
            "90": 549,
            "length": 91,
          },
          "fact": Object {
            "kind": "video",
            "primaryDate": "2016-10-09",
            "primaryDateKind": "recorded",
            "title": "Donald Trump - Hillary Clinton (2/3)",
          },
          "plainText": "Good evening I'm Martha Raddatz from ABC News. And I'm Anderson Cooper from CNN. We want to welcome you to Washington University in St. Louis for the second presidential debate between Hillary Clinton and Donald Trump sponsored by the Commission on Presidential Debates. tonight's debate is a Town Hall format, which gives voters a chance to directly ask the candidates questions. Martha and I will ask follow-up questions but the night really belongs to the people in this room and to people across the country who have submitted questions online.",
          "speakerPerson": Object {
            "0": 0,
            "1": 1,
            "length": 2,
          },
          "speakerWord": Object {
            "0": 0,
            "1": 8,
            "length": 2,
          },
          "speakers": Array [
            Object {
              "firstname": "Martha",
              "lastname": "Raddatz",
            },
            Object {
              "firstname": "Anderson",
              "lastname": "Cooper",
            },
          ],
          "timestamps": Object {
            "0": 0.75,
            "1": 0.9599999785423279,
            "10": 4.258999824523926,
            "11": 4.5289998054504395,
            "12": 4.679999828338623,
            "13": 5.099999904632568,
            "14": 5.309999942779541,
            "15": 5.489999771118164,
            "16": 5.548999786376953,
            "17": 5.699999809265137,
            "18": 5.879000186920166,
            "19": 6.089000225067139,
            "2": 1.559999942779541,
            "20": 6.239999771118164,
            "21": 7.199999809265137,
            "22": 7.289999961853027,
            "23": 7.5289998054504395,
            "24": 7.798999786376953,
            "25": 8.010000228881836,
            "26": 8.428999900817871,
            "27": 8.880000114440918,
            "28": 9.239999771118164,
            "29": 9.6899995803833,
            "3": 1.9199999570846558,
            "30": 9.718999862670898,
            "31": 10.289999961853027,
            "32": 10.319999694824219,
            "33": 10.678999900817871,
            "34": 10.888999938964844,
            "35": 11.388999938964844,
            "36": 12.388999938964844,
            "37": 12.479999542236328,
            "38": 12.539999961853027,
            "39": 12.989999771118164,
            "4": 2.128999948501587,
            "40": 13.079999923706055,
            "41": 13.649999618530273,
            "42": 13.880000114440918,
            "43": 14.880000114440918,
            "44": 15.149999618530273,
            "45": 15.388999938964844,
            "46": 15.449999809265137,
            "47": 15.869999885559082,
            "48": 16.108999252319336,
            "49": 16.138999938964844,
            "5": 2.5199999809265137,
            "50": 16.799999237060547,
            "51": 17.010000228881836,
            "52": 17.43000030517578,
            "53": 17.459999084472656,
            "54": 17.608999252319336,
            "55": 18.118999481201172,
            "56": 18.6299991607666,
            "57": 18.809999465942383,
            "58": 18.989999771118164,
            "59": 19.40999984741211,
            "6": 3.059999942779541,
            "60": 19.788999557495117,
            "61": 20.788999557495117,
            "62": 20.8799991607666,
            "63": 20.93899917602539,
            "64": 21.149999618530273,
            "65": 21.299999237060547,
            "66": 21.68899917602539,
            "67": 21.809999465942383,
            "68": 22.469999313354492,
            "69": 22.59000015258789,
            "7": 3.0899999141693115,
            "70": 22.768999099731445,
            "71": 23.038999557495117,
            "72": 23.459999084472656,
            "73": 23.760000228881836,
            "74": 23.850000381469727,
            "75": 24.149999618530273,
            "76": 24.239999771118164,
            "77": 24.389999389648438,
            "78": 24.68899917602539,
            "79": 24.989999771118164,
            "8": 3.6589999198913574,
            "80": 25.018999099731445,
            "81": 25.709999084472656,
            "82": 25.799999237060547,
            "83": 26.1299991607666,
            "84": 26.309999465942383,
            "85": 26.639999389648438,
            "86": 26.670000076293945,
            "87": 26.93899917602539,
            "88": 27.510000228881836,
            "89": 28.170000076293945,
            "9": 3.869999885559082,
            "90": 28.829999923706055,
            "length": 91,
          },
          "youtubeId": "ApTLB76Nmdg",
        }
      }
    />
  </div>
</div>
`;
